<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="is_sun_schedule_update"
        android:title="@string/pref_title_is_sun_schedule_update"
        android:summary="@string/pref_description_is_sun_schedule_update" />

    <ListPreference
        android:key="interval_sun_schedule_update"
        android:dependency="is_sun_schedule_update"
        android:title="@string/pref_title_interval_sun_schedule_update"
        android:entries="@array/pref_interval_sun_schedule_update_titles"
        android:entryValues="@array/pref_interval_sun_schedule_update_values"
        android:defaultValue="7"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <EditTextPreference
        android:key="interval_sun_schedule_update_delay"
        android:dependency="is_sun_schedule_update"
        android:title="@string/pref_title_interval_sun_schedule_update_delay"
        android:defaultValue="@string/pref_default_interval_sun_schedule_update_delay"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

</PreferenceScreen>
