<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="kg.delletenebre.autobrightnesssunflower.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="kg.delletenebre.autobrightnesssunflower.SettingsActivity$BrightnessPreferenceFragment"
        android:icon="@drawable/ic_brightness_black_24dp"
        android:title="@string/pref_header_brightness" />

    <header
        android:fragment="kg.delletenebre.autobrightnesssunflower.SettingsActivity$SunSyncPreferenceFragment"
        android:icon="@drawable/ic_time_black_24dp"
        android:title="@string/pref_header_sun_sync" />

</preference-headers>
