<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kg.delletenebre.autobrightnesssunflower.StartActivity"
    tools:showIn="@layout/activity_start">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/location" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_marginStart="@dimen/table_cells_margin"
                android:text="@string/unknown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/coordinates" />

            <TextView
                android:id="@+id/textCoordinates"
                android:layout_marginStart="@dimen/table_cells_margin"
                android:text="@string/unknown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/day" />

            <TextView
                android:id="@+id/textDay"
                android:layout_marginStart="@dimen/table_cells_margin"
                android:text="@string/unknown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/dusk" />

            <TextView
                android:id="@+id/textDusk"
                android:layout_marginStart="@dimen/table_cells_margin"
                android:text="@string/unknown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/night" />

            <TextView
                android:id="@+id/textNight"
                android:layout_marginStart="@dimen/table_cells_margin"
                android:text="@string/unknown" />

        </TableRow>

        <TableLayout
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/update_location"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/update_location"
                    android:textColor="@android:color/white"
                    app:pb_colorError="@color/red_error" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/enter_location"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/enter_location"
                    android:textColor="@android:color/white"
                    app:pb_colorError="@color/red_error" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/enter_coordinates"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/enter_coordinates"
                    android:textColor="@android:color/white"
                    app:pb_colorNormal="@color/blue_normal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/update_schedule"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/update_schedule"
                    android:textColor="@android:color/white"
                    app:pb_colorError="@color/red_error" />
            </TableRow>

        </TableLayout>
    </TableLayout>
</ScrollView>