<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_margin"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude" />

        <EditText
            android:id="@+id/lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/table_cells_margin"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/hint_coordinates" />
    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/table_cells_margin"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/hint_coordinates" />
    </TableRow>

</TableLayout>