<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StartActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_start">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/coordinates" />
                <TextView
                    android:id="@+id/textCoordinates"
                    android:layout_marginLeft="@dimen/table_cells_margin"
                    android:layout_marginStart="@dimen/table_cells_margin"
                    android:text="@string/unknown" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/day" />
                <TextView
                    android:id="@+id/textDay"
                    android:layout_marginLeft="@dimen/table_cells_margin"
                    android:layout_marginStart="@dimen/table_cells_margin"
                    android:text="@string/unknown" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/dusk" />
                <TextView
                    android:id="@+id/textDusk"
                    android:layout_marginLeft="@dimen/table_cells_margin"
                    android:layout_marginStart="@dimen/table_cells_margin"
                    android:text="@string/unknown" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/night" />
                <TextView
                    android:id="@+id/textNight"
                    android:layout_marginLeft="@dimen/table_cells_margin"
                    android:layout_marginStart="@dimen/table_cells_margin"
                    android:text="@string/unknown" />
            </TableRow>

            <Button
                android:id="@+id/enter_coordinates"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/enter_coordinates" />

        </TableLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
